--- a/backend/ontario_audio_tour/.gitignore
+++ b/backend/ontario_audio_tour/.gitignore
@@ -1,3 +1,5 @@
 AdminControl/__pycache__/
+accounts/__pycache__/
 AdminControl/migrations/__pycache__/
+accounts/migrations/__pycache__/
 ontario_audio_tour/__pycache__/
