changed host name

--- a/frontend/d3/frontend/package.json
+++ b/frontend/d3/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "options": {
-    "proxy": "http://localhost:3000"
+    "proxy": "http://3.99.190.60:3000"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
