--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Image CI/CD
 
 on:
   push:
@@ -9,7 +9,7 @@ env:
   
 jobs:
 
-  build:
+  build-and-push-images:
 
     runs-on: ubuntu-latest
 
@@ -25,10 +25,10 @@ jobs:
       run: |
         IMAGE_ID_API=ghcr.io/project-24-ontario-parks-T/$IMAGE_NAME_API
         echo IMAGE_ID_API=$IMAGE_ID_API
-        docker tag $IMAGE_NAME $IMAGE_ID_API:latest
+        docker tag $IMAGE_NAME_API $IMAGE_ID_API:latest
         docker push $IMAGE_ID_API:latest
 
         IMAGE_ID_FRONTEND=ghcr.io/project-24-ontario-parks-T/$IMAGE_NAME_FRONTEND
         echo IMAGE_ID_FRONTEND=$IMAGE_ID_FRONTEND
-        docker tag $IMAGE_NAME $IMAGE_ID_FRONTEND:latest
+        docker tag $IMAGE_NAME_FRONTEND $IMAGE_ID_FRONTEND:latest
         docker push $IMAGE_ID_FRONTEND:latest
